MPDX-5237 fix safari scroll jump (#1225)

--- a/src/contacts/show/_show.scss
+++ b/src/contacts/show/_show.scss
@@ -13,7 +13,7 @@ contact {
     height: 100%;
     > div.contact-show {
         display: grid;
-        height: 100%;
+        height: calc(100vh - 130px); // calc needed for safari
         background-color: $color-blue-deep-alpha-10;
         overflow-y: auto;
         overflow-x: hidden;
